k8s/base/mesh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-mesh
  labels:
    name: hhb-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hhb-mesh
  template:
    metadata:
      labels:
        name: hhb-mesh
    spec:
      containers:
        - name: hhb-mesh
          image: mesh
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: http
            periodSeconds: 10
          resources:
            limits:
              cpu: 250m
              memory: 1000Mi
            requests:
              cpu: 150m
              memory: 512Mi
