k8s/base/mesh/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-mesh
  labels:
    name: hhb-mesh
spec:
  type: ClusterIP
  selector:
    name: hhb-mesh
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
